Changes since Lynx 2.8 release
===============================================================================

2006-10-10 (2.8.6rel.1)

2006-10-10 (2.8.6pre.6)
* minor formatting fixes to CHANGES and CHANGES2.8 to facilitate scripted
  analysis of contributions -TD
* predefine _XOPEN_SOURCE_EXTENDED on HPUX to make color-style build -TD
* broaden the conditions on which to reload the color-style information to
  cover any (re)initialization of the screen, e.g., when resizing using
  ordinary curses (report by PG) -TD

2006-10-02 (2.8.6pre.5)
* modify cfg2html.pl to use "use vars" rather than "our", to allow it to work
  with perl version 5.5 -TD
* use curses nodelay() function for BeOS to make HTCheckForInterrupt() work
  on that platform -TD
* filter out obsolete URLs from the customizations saved during install of
  lynx.cfg -TD
* add a configure check for zError() to allow using old zlib's -TD
* fix configure --disable-largefile (from ncurses changes) -TD
* applied lynx's changes to updated files from ftp.unicode.org to take
  advantage of less restrictive copyright (report by Klaus Singvogel) -TD
* workaround for PDCurses versus color-style; reload color style information
  in start_curses() since PDCurses discards that information in endwin()
  (report by Lawrence Armstrong) -TD

2006-09-18 (2.8.6pre.4)
* updated link in user's guide to HTML 3.0 reference (report by TH) -TD
* remove coloring for lh- and high-tags from LYStyle.c and sample ".lss" files
  since that tag is nonstandard (report by TH) -TD
* update da.po from
    http://www.iro.umontreal.ca/translation/maint/lynx/
* add script samples/oldlynx, which gives the non-color-style scheme using
  an executable built for color-style -TD
* add DEFAULT_COLORS item to lynx.cfg to allow disabling the default colors
  feature at runtime, allowing better matching of old color scheme via a
  script -TD
* update VMS descrip.mms files, adding the ability to build with slang -TD

2006-09-10 (2.8.6pre.3)