@@ -1,7 +1,7 @@
 
                              Lynx README file
 
-Lynx Version 2.8.5 is the latest release (February 2004).
+Lynx Version 2.8.6 is the latest release (October 2006).
 See the CHANGES file for a complete record of all changes and bug fixes.
 New releases are announced on the lynx-dev mailing list (see below).
 
