@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 3.0//EN">
 <html>
 <head>
-<title>Lynx Users Guide v2.8.5</title>
+<title>Lynx Users Guide v2.8.6</title>
 <link rev="made" href="mailto:lynx-dev@nongnu.org">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
 <body>
-<h1>Lynx Users Guide v2.8.5</h1>
+<h1>Lynx Users Guide v2.8.6</h1>
 
 Lynx is a fully-featured <em>World Wide Web</em> (<em>WWW</em>) client
 for users running cursor-addressable, character-cell display devices (e.g.,
@@ -491,7 +491,7 @@ The form-based menu shown below is an HTML file generated at runtime,
 in which the user fills in choices as in any ordinary HTML form.
 <pre>
 
-                    Options Menu (Lynx Version 2.8.5dev.15)
+                    Options Menu (Lynx Version 2.8.6rel.2)
 
       Accept Changes - Reset Changes Left Arrow cancels changes <A
 HREF="keystrokes/option_help.html">HELP!</A>
@@ -566,7 +566,7 @@ and is accessed by setting FORMS_OPTIONS to TRUE in
 <A HREF="#lynx.cfg">lynx.cfg</A>.
 <pre>
 
-             Options Menu (Lynx Version 2.8.5rel.1)
+             Options Menu (Lynx Version 2.8.6rel.2)
 
      (E)ditor                     : emacs
      (D)ISPLAY variable           : aixtest.cc.ukans.edu:0.0
@@ -960,7 +960,7 @@ return to Lynx or the '<em>&gt;</em>' command to save the options to a
         <dd>The header string which Lynx sends to HTTP servers to indicate the
             User-Agent is displayed here.  Changes may be disallowed via
             the <em>-restrictions</em> switch.  Otherwise, the header can be
-            changed temporarily to a string such as <em>L_y_n_x/2.8.5</em>
+            changed temporarily to a string such as <em>L_y_n_x/2.8.6</em>
             for access to sites which discriminate against Lynx based on
             checks for the presence of &quot;Lynx&quot; in the header.  If
             the User-Agent header has been changed, it can
@@ -3126,6 +3126,7 @@ The 2.8.1 development set was released as v2.8.2 in June 1999.<br>
 The 2.8.2 development set was released as v2.8.3 in April 2000.<br>
 The 2.8.3 development set was released as v2.8.4 in July 2001.<br>
 The 2.8.4 development set was released as v2.8.5 in February 2004.<br>
+The 2.8.5 development set was released as v2.8.6 in October 2006.<br>
 
 <p>Since early 1997, the Lynx code has expanded into autoconfigure and
 PC versions.  The branching of the Lynx source base from a single
