@@ -27,7 +27,7 @@
 <h2>Other sources of Lynx help:</h2>
 
 <ul>
-<li><a href="http://www.hippo.ru/%7Ehvv/lynxcfg_toc.html">lynx.cfg options</a>
+<li><a href="http://lynx.isc.org/release/lynx2-8-6/lynx_help/cattoc.html">lynx.cfg options</a>
  -- a reference for advanced configurations
 <li><a href="http://www.chass.utoronto.ca/%7Epurslow/lhfb.html">Lynx Help for Beginners</a> -- quick help on many common problems
 <!-- {li}{a href="http://lynx.isc.org/cgi-bin/fom"}The Lynx FAQ-O-Matic{/a} .. many common queries, some more advanced; users may add answers. -->
